# Bachelor-Project

./: CMakeLists.txt  requirements.txt
assets/config/: player_data.json
include/header/: ICollidable.h  Logger.h  MLDataCollector.h  WindowUtils.h
include/header/pathfinding/: AStarPathFinder.h
include/header/strategy/playerStrategy/: StandardPlayerStrategy.h
src/: Config.cpp  GameHandler.cpp  GameMap.cpp  GameStatisticsWindow.cpp  MLDataCollector.cpp  PlayerStrategyFactory.cpp  PythonEnvironment.cpp  PythonPlayerAI.cpp  Team.cpp  TeamStrategyFactory.cpp  UserControlledPlayerAI.cpp  main.cpp
src/screen/: SingleGameScene.cpp
src_python/ml_python/: ml_model_2.joblib  train_ml_model.py
src_python/ml_python/datasets/: team_2.jsonl
src_python/python_strategies/player/with_team_context/: ml_player_strategy.py
